# laboptimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  frontend.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: random_search.py
backend/tests/: test_api.py
frontend/: .eslintrc.cjs  package-lock.json  package.json
frontend/src/: App.tsx
