[project]
name = "laboptimizer"
version = "0.1.0"
description = "Tool for lap optimization and ML uses"
authors = [
    {name = "ChristopheBaj",email = "christophe.bajan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
name = "laboptimizer"
version = "0.1.0"
package-mode = false