[tool.poetry]
name = "laboptimizer-backend"
version = "0.1.0"
description = "LabOptimizer backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
httpx = "*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]